# TiebaMecha

./: .env.example  .gemini_diff.txt  .gitignore  CHANGELOG.md  Dockerfile  README.md  check_flet.py  docker-compose.yml  launcher.py  pyproject.toml  start_web.bat  start_web.py  test_datatable_listview.py  test_datatable_update.py  test_db_integration.py  test_flet_datatable.py  test_output.txt  test_output_target.txt  test_survival.py  test_survival_stats.py  threads_export_20260405_103934.csv  tmp_fix.py  tmp_fix2.py  tmp_search_exact.txt  tmp_user_methods.txt  网盘精准配对导入模板.csv
.codebuddy/plans/: fix-bump-content-anti-spam_fbe0cec0.md
docs/: FAQ.md  FEISHU_WIKI_AUTOMATION_PLAN.md  FLET_COMPAT.md  USER_GUIDE.md  short_link_filter_plan.md
docs/deployment/: distribution-guide.md  linux-deployment.md
docs/development/: dependency_management_best_practices.md
docs/technical/: licensing-and-broadcast-integration.md  notification-and-update-modules.md
output/: threads_网盘资源分享8_20260409_205342.json  user_7032046377_20260409_205022.json
plugins/: hello_mecha.py
scratch/: check_encoding.py  check_logs.py  diagnose_account.py  diagnose_account_v2.py  diagnose_account_v3.py  test_ai_personas.py  test_schedule.py  verify_realtime_stats.py  verify_rotation.py  verify_stats_fix.py
scripts/: build_copy_venv.py  build_portable.py  build_pyinstaller.py  diagnose_success_count.py
scripts/developer/: check_icons.bat  debug_import.py  flet_test.py  quick_test.py  run_tests.bat  run_tests.py  run_tests_direct.py  tmp_test_db.py  verify_advanced.py  verify_ai.py
scripts/launcher/: start_cli.bat  start_scheduler.bat
scripts/templates/: launcher.py  setup_env.py  启动网页版控制台.bat
src/tieba_mecha/: __init__.py
tests/: __init__.py  conftest.py  test_account.py  test_ai_optimizer.py  test_batch_post.py  test_batch_post_fixes.py  test_bug_fixes.py  test_bump_config.py  test_code_review_fixes.py  test_daemon_integration.py  test_database.py  test_encoding_safety.py  test_follow_logic.py  test_integration.py  test_log_view.py  test_maintenance.py  test_maintenance_full.py  test_matrix_hub.py  test_notification.py  test_obfuscator.py  test_package.py  test_proxy.py  test_pubsub_patch.py  test_purge_logic.py  test_sign.py  test_survival.py  test_survival_page.py  test_tactical_advice.py  test_target_pool_status.py  test_updater.py  test_workflow_batch_post.py
tests/manual/: test_all.bat  test_all.py  test_api.bat  test_flet_api.py  test_login.bat  test_login.py  test_minimal.bat  test_minimal_app.py  test_mock.py  test_nav.bat  test_nav.py  test_pages.py  test_render.py  test_render_2.py  test_seo_selection.py  (+4 more)
website/: package.json  style.css  tailwind.config.js
(+56 files in other folders)
