[project]
name = "tieba-mecha"
version = "1.1.0"
description = "Cyber-Mecha style Baidu Tieba management tool with CLI and Web UI"
authors = [{ name = "Developer" }]
requires-python = ">=3.10,<3.15"
dependencies = [
    "aiotieba",
    "flet>=0.21.0,<0.90.0",  # 锁定版本范围，避免 API 变更
    "typer>=0.9.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19.0",
    "apscheduler>=3.10",
    "cryptography>=41.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",  # 显式声明依赖
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
]

[project.scripts]
tieba = "tieba_mecha.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tieba_mecha"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "A", "C4", "FA", "PT", "ASYNC"]
ignore = ["A005", "E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
